--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
+    "easy-peasy": "^3.3.0",
     "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
