--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "easy-peasy": "^3.3.0",
     "history": "^4.10.1",
+    "moment": "^2.25.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
