document env examples

--- a/backend/example.env
+++ b/backend/example.env
@@ -1,2 +1,6 @@
+# complete connect URL to mongodb
 MONGO_URL=mongodb://localhost:27017/sketch_db
+
+# the URL, this backend server will be available at
+# (this is also used as the CORS origin in production)
 ROOT_URL=http://localhost:8080
